hw11 and other updates

--- a/hw11/hw11.ipynb
+++ b/hw11/hw11.ipynb
@@ -294,37 +294,15 @@
    "source": [
     "#### Exercise 7 -  Large data sets and sub Plots\n",
     "\n",
-    "For this exercise you will download historical stock data from the internet from the below link. The data is available at - \n",
+    "For this exercise you will download historical stock data from the internet from the below link. The data is available at - https://github.com/cis024c/fall2017hw/raw/master/hw11/all_stocks_1yr.csv. The data has the following fields - Date, Open, High, Low, Close, Volume, Name. The Name is the stock ticker or stock symbol.\n",
     "\n",
-    "\n"
+    "Your subplot will involve two plots in a 1X2 grid (1 row and two columns)\n",
+    "\n",
+    "* The first column will show a plot of date versus the price at close\n",
+    "* The second column show show a plot of date versus the volume\n",
+    "\n",
+    "You will create an interactive way for the user to enter the ticker symbol and then look up for the data corresponding to that symbol and show the corresponding plot for that chart."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
